fix home page container alignment

--- a/client/src/Chat.css
+++ b/client/src/Chat.css
@@ -2,8 +2,8 @@
   border: 5px solid;
   border-color: #00c0ce;
   border-radius: 8px;
-  margin-right: 80px;
-  width: 100%;
+  /*margin-right: 80px;*/
+  /*width: 50%;*/
   background-color: rgba(0, 0, 0, 0.7);
   height: 600px;
   display: flex;
